overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,9 @@ html {
 html, body {
   overflow-x: hidden;
 }
+
+@media (max-width: 768px) {
+  html, body {
+    overflow-x: hidden;
+  }
+}
